<resources>
    <string name="app_name">PantauHarga</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming Events</string>
    <string name="title_finished">Finished Events</string>
    <string name="title_save">Saved Item</string>
    <string name="title_settings">Settings</string>
    <string name="event_image">Event Image</string>
    <string name="regis">Registrasi</string>
    <string name="comodity">Comodity Name</string>
    <string name="begin_time">Waktu Mulai: %1$s</string>
    <string name="organizer">Penyelenggara Acara: %1$s</string>
    <string name="remaining_quota">Sisa Kuota: %1$d</string>
    <string name="fav">Favorit</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_ket">Enable Dark Mode</string>
    <string name="notif">Daily Reminder</string>
    <string name="notif_ket">Enable Notification</string>
    <string name="search_hint">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cari_bahan_komoditas">Cari Bahan Komoditas</string>
    <string name="rupiah">Rp%1$s</string>
    <string name="hargarupiah">Rp%1$s</string>
    <string name="network">Connection Failed</string>
</resources>