<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.pantauharga.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>


    <fragment
        android:id="@+id/navigation_save"
        android:name="com.capstone.pantauharga.ui.savedItem.SaveFragment"
        android:label="@string/title_save"
        tools:layout="@layout/fragment_saved_item" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.capstone.pantauharga.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />


</navigation>