<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/event_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/favButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="172dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_shape"
            android:src="@drawable/ic_fav_border"
            android:contentDescription="@string/fav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favButton" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvQuota"
            style="@style/DetailStyle"
            app:layout_constraintTop_toBottomOf="@id/tvEventName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvBeginTime"
            style="@style/DetailStyle"
            app:layout_constraintTop_toBottomOf="@id/tvQuota"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvShow"
            style="@style/DetailStyle"
            app:layout_constraintTop_toBottomOf="@id/tvBeginTime"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="16dp"
            android:justificationMode="inter_word"
            app:layout_constraintTop_toBottomOf="@id/tvShow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/regis"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
